--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -20,5 +20,6 @@
     <dimen name="image_thumbnail_size">100dp</dimen>
     <dimen name="image_thumbnail_spacing">1dp</dimen>
     <dimen name="image_detail_pager_margin">80dp</dimen>
+    <dimen name="list_image_size">73dp</dimen>
 
 </resources>
