--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -10,7 +10,7 @@
             android:layout_width="73dip"
             android:layout_height="73dip"
             android:src="@drawable/ic_launcher"
-            android:scaleType="centerCrop"/>
+            android:scaleType="center"/>
     <TextView
             android:id="@+id/text"
             android:layout_width="0dp"
